--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,7 @@
     </script>
     <div>
       <button id="send">送信テスト</button>
+      <div>VOICEVOX:ずんだもん</div>
     </div>
     <script></script>
   </body>
